<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragCrea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EncounterTracker.ETCrea">

    <TextView
        android:id="@+id/tvTypeFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/temp"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ACFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ac"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/HPFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/CRFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cr"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvACFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvHPFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCRFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/STRFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str" />

        <TextView
            android:id="@+id/DEXFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dex" />

        <TextView
            android:id="@+id/CONFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/con" />

        <TextView
            android:id="@+id/INTELFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/intel" />

        <TextView
            android:id="@+id/WISFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wis" />

        <TextView
            android:id="@+id/CHAFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cha" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSTRFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDEXFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCONFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvINTFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvWISFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCHAFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSTRModFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDEXModFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCONModFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvINTModFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvWISModFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCHAModFrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="12sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvExtraStuffFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/temp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/AttributesFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:text="@string/attributes"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAttributesFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/temp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/SpellsFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:clickable="true"
                android:text="@string/spells"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSpellsFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/temp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/ActionsFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:text="@string/actions"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvActionsFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/temp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/LegendaryActionsFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="1dp"
                android:text="@string/legendary_actions"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLegendActionsFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/temp"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>